--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Dollcode Converter">
+  <meta name="description" content="Semi-smart Dollcode Converter">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="marionette_web">
+  <meta name="apple-mobile-web-app-title" content="Marionette">
   <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
 
   <!-- Favicon -->
