--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>marionette_web</title>
+  <title>Marionette</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
